src/objects/EMP_Organization__c.object
<CustomObject>
    <fields>
        <fullName>Organization_City__c</fullName>
        <label>Organization City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_District__c</fullName>
        <label>Organization District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <label>Organization Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Phone__c</fullName>
        <label>Organization Phone</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Region__c</fullName>
        <label>Organization Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Type__c</fullName>
        <label>Organization Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asociación de productores</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Empresa Asociativa de Trabajo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precooperativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooperativa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soc. Agrarias de Transformación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junta de Acción Comunal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asociativa Productora Agricola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otra</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_sector__c</fullName>
        <label>Organization sector</label>
        <picklist>
            <picklistValues>
                <fullName>Compostaje</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frijol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semillas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hortalizas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arroz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RUT__c</fullName>
        <label>RUT</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submission</label>
        <referenceTo>gfsurveys__Submission__c</referenceTo>
        <relationshipLabel>EMP Organizations</relationshipLabel>
        <relationshipName>EMP_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EMP Organization</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>Organization_District__c</columns>
        <columns>Organization_City__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>EMP Organization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EMP Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>